[package]
name = "ruscript"
version = "0.1.0"
authors = ["Zhen Zhang <izgzhen@gmail.com>"]

[lib]
name = "ruscript"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies.gc]
path = "../rust-gc/gc"
version = "0.0.4"

[dependencies.gc_plugin]
path = "../rust-gc/gc_plugin"
version = "0.0.4"

