name:                ruscript-compiler
version:             0.1.1
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable rusc
  main-is:             Main.hs
  other-modules:       Language.RuScript.Compiler
                       Language.RuScript.Parser
                       Language.RuScript.Serialize
                       Language.RuScript.NameSpace
                       Language.RuScript.AST
  other-extensions:    FlexibleContexts
  build-depends:       base >=4.8 && <4.9,
                       mtl >=2.2 && <2.3,
                       containers >=0.5 && <0.6,
                       parsec >=3.1 && <3.2,
                       bytestring,
                       binary,
                       utf8-string,
                       split
  hs-source-dirs:      src
  default-language:    Haskell2010