name:                rusc
version:             0.3.1
synopsis:            Compiler for RuScript
-- description:         
license:             MIT
license-file:        LICENSE
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable rusc
  main-is:             Main.hs
  other-modules:       Language.RuScript.Codegen
                       Language.RuScript.Parser
                       Language.RuScript.Serialize
                       Language.RuScript.AST
                       Language.RuScript.ByteCode
                       Language.RuScript.StaticCheck
                       Language.RuScript.Option
                       Language.RuScript.Desugar
                       Language.RuScript.Optimize
  other-extensions:    FlexibleContexts
  build-depends:       base >=4.8 && <4.9,
                       mtl >=2.2 && <2.3,
                       containers >=0.5 && <0.6,
                       parsec >=3.1 && <3.2,
                       bytestring,
                       binary,
                       utf8-string,
                       split,
                       vector,
                       lens
  hs-source-dirs:      src
  default-language:    Haskell2010
--  ghc-options:         -Wall