[package]
name = "rvm"
version = "0.3.1"
authors = ["Zhen Zhang <izgzhen@gmail.com>"]

[lib]
name = "rvm"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies.gc]
path = "../../rust-gc/gc"
version = "0.0.5"

[dependencies.gc_plugin]
path = "../../rust-gc/gc_plugin"
version = "0.0.5"

