[package]
name = "rvm"
version = "0.3.2"
authors = ["Zhen Zhang <izgzhen@gmail.com>"]

[lib]
name = "rvm"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies.gc]
path = "../rust-gc/gc"
version = "0.2.0"

[dependencies.gc_derive]
path = "../rust-gc/gc_derive"
version = "0.2.0"
